Fix statement and portfolio EmptySlate on Android 4.4 and add better scrolling of OHLC table on iOS

--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -382,6 +382,7 @@ nav.sidebar {
 
 .empty-slate {
     height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
