--- a/styles/_examine-asset.scss
+++ b/styles/_examine-asset.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+
     .examine-asset-picker {
         margin: 0.5em;
         line-height: 1.5;
@@ -26,5 +27,6 @@
 
     .daily-prices-card {
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
     }
 }
