--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -5,6 +5,9 @@
 .portfolio-card {
     width: 100%;
     height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 
     .notice-msg {
         margin: 0.5rem;
