--- a/styles/_statement.scss
+++ b/styles/_statement.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    flex: 1;
 
     [role=tablist] {
         margin-bottom: 0;
